# build-wise

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CONTEXT.md  Cargo.toml  Dockerfile  LICENSE  README.md  config.yaml  docker-compose.yml  test-tailwind.html  test.html
.github/workflows/: ci.yml  docker.yml
docs/: PRD-建造信息AI分析系统.md  design-grilling.md
docs/adr/: 0001-tech-stack.md  0002-mcp-integration.md  0003-agent-architecture.md  0004-semantic-schema.md  0005-sse-api-spec.md  0006-thinking-stream-separation.md  0007-streaming-markdown-chunked-render.md
prompts/: system-prompt.md
src/: config.rs  main.rs
src/ai/: deepseek.rs  driver.rs  mod.rs
src/api/: chat.rs
src/mcp/: client.rs
