[package]
name = "build-wise"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
async-openai = "0.28"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
serde_yaml = "0.9"
futures = "0.3"
tokio-stream = "0.1"
tokio-util = { version = "0.7", features = ["rt"] }
tower-http = { version = "0.6", features = ["cors"] }
dotenvy = "0.15"
reqwest = { version = "0.12", features = ["json", "stream"] }
